<resources>
    <string name="app_name">Serving Size Calculator</string>
    <string name="select_a_pot_to_use">Select a pot to use:</string>
    <string name="add_pot">Add Pot</string>
    <string name="pot_weight_g">Pot Weight (g):</string>
    <string name="pot_weight_g_edit">Pot Weight (g)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="pot_name">Pot Name</string>
    <string name="pot_name_textView">Pot Name:</string>
    <string name="no_name">No Name</string>
    <string name="weight_empty_g">Weight Empty(g):</string>
    <string name="no_weight_found">No Weight Found</string>
    <string name="weight_with_food_g">Weight With Food(g):</string>
    <string name="weight_of_food_g">Weight of Food(g):</string>
    <string name="_0">0</string>
    <string name="servings"># Servings:</string>
    <string name="serving_weight_g">Serving Weight(g):</string>
    <string name="_00">0</string>
    <string name="back">Back</string>
    <string name="pot">Pot:</string>
</resources>
