<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculate_serving_size"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmpt276.eli.servingsizecalculator.CalculateServingSizeActivity">

    <TextView
        android:text="@string/pot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/no_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="130dp"
        android:id="@+id/potName" />

    <TextView
        android:text="@string/weight_empty_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <TextView
        android:text="@string/no_weight_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/potName"
        android:layout_alignLeft="@+id/potName"
        android:layout_alignStart="@+id/potName"
        android:id="@+id/potWeight" />

    <TextView
        android:text="@string/weight_with_food_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="0"
        android:ems="10"
        android:id="@+id/potWeightWithFood"
        android:layout_below="@+id/potWeight"
        android:layout_alignLeft="@+id/potWeight"
        android:layout_alignStart="@+id/potWeight" />

    <TextView
        android:text="@string/weight_of_food_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/potWeightWithFood"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/potWeightWithFood"
        android:layout_alignLeft="@+id/potWeightWithFood"
        android:layout_alignStart="@+id/potWeightWithFood"
        android:id="@+id/weightOfFood" />

    <TextView
        android:text="@string/servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="1"
        android:ems="10"
        android:id="@+id/numberOfServings"
        android:layout_below="@+id/weightOfFood"
        android:layout_alignLeft="@+id/weightOfFood"
        android:layout_alignStart="@+id/weightOfFood" />

    <TextView
        android:text="@string/serving_weight_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_below="@+id/numberOfServings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/_00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberOfServings"
        android:layout_alignLeft="@+id/numberOfServings"
        android:layout_alignStart="@+id/numberOfServings"
        android:id="@+id/servingWeight" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/servingWeight"
        android:layout_toRightOf="@+id/potName"
        android:layout_toEndOf="@+id/potName"
        android:id="@+id/btnBack" />
</RelativeLayout>
