<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pot_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmpt276.eli.servingsizecalculator.PotAddActivity">

    <TextView
        android:text="@string/pot_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potNameTxtView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/pot_name"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/potNameEditBox"
        android:layout_alignBaseline="@+id/potNameTxtView"
        android:layout_alignBottom="@+id/potNameTxtView"
        android:layout_toRightOf="@+id/potNameTxtView"
        android:layout_toEndOf="@+id/potNameTxtView"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/pot_weight_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/potWeightTextView"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/potNameEditBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/pot_weight_g_edit"
        android:ems="10"
        android:id="@+id/potWeightEditBox"
        android:layout_below="@+id/potNameEditBox"
        android:layout_alignLeft="@+id/potNameEditBox"
        android:layout_alignStart="@+id/potNameEditBox" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/potWeightEditBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/btnOk" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:layout_alignBaseline="@+id/btnOk"
        android:layout_alignBottom="@+id/btnOk"
        android:layout_toRightOf="@+id/btnOk"
        android:layout_toEndOf="@+id/btnOk"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp" />

</RelativeLayout>
